kio_sftp: Add debug and warning if for setting the mtime.

BUG: 206921